cluster/core/longhorn/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: default
  labels:
    app.kubernetes.io/name: longhorn
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`longhorn.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: authelia
          namespace: authentication-system
        - name: local-only@file
      services:
        - name: longhorn-frontend
          port: 80
          namespace: longhorn-system
  tls:
    secretName: "${SECRET_CERT_NAME_0}-prod-tls"
